--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,210 @@
 <body>
    
     <div class="container ">
-        <h1 class="text-center">Scientif Calculator</h1>
+        <h1 class="text-center mt-4">Scientific  Calculator</h1>
+
+        <div class="row ">
+            <div class="col-md-6  offset-md-3 col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <input readonly id="calc-display" class="form-control form-control-lg" type="text"  aria-label=".form-control-lg example">
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">(</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">)</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">%</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">AC</button>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">7</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">8</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">9</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">÷</button>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                        </div>
+
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">4</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">5</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">6</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">*</button>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                        </div>
+
+
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">1</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">2</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">3</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">-</button>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                        </div>
+
+
+
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">0</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">.</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">=</button>
+                            </div>
+
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">+</button>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+                </div>
+            </div>
+            
+
+        </div>
 
 
     </div>
